# TeleCog

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml
telecog/: asgi.py  settings.py  urls.py  wsgi.py
telecog_main/: apps.py  models.py  urls.py  views.py
telecog_main/migrations/: 0001_initial.py
