[tool.poetry]
name = "telecog"
version = "0.1.0"
description = ""
authors = ["kan kawabata <kkawabat@asu.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
twilio = "^9.2.3"
django = "^5.0.7"
django-twilio = "^0.14.3.3"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
